@@ -1,3 +1,5 @@
+package quiz;
+
 import com.google.gson.Gson;
 
 import java.io.File;
@@ -72,7 +74,8 @@ public class Topic {
 
         // read Topic object from json file
         try {
-            String jsonString = Files.readString(f.toPath());
+            // String jsonString = Files.readString(f.toPath()); //java 11, doenst work with java 8
+            String jsonString = new String(Files.readAllBytes(f.toPath()));
             Topic t = gson.fromJson(jsonString, Topic.class);
             return t;
 
